k8s/04-order-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  namespace: msa-demo
  labels:
    app: order-service
    app.kubernetes.io/name: order-service
    app.kubernetes.io/part-of: msa-order-system
spec:
  replicas: 2
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
        app.kubernetes.io/name: order-service
        app.kubernetes.io/part-of: msa-order-system
    spec:
      containers:
        - name: order-service
          image: 15.165.77.105:30002/msa-demo/order-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
              name: http
          resources:
            requests:
              cpu: "50m"
              memory: "96Mi"
            limits:
              cpu: "300m"
              memory: "384Mi"
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 8
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 15
            timeoutSeconds: 3
            failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: msa-demo
  labels:
    app: order-service
    app.kubernetes.io/name: order-service
    app.kubernetes.io/part-of: msa-order-system
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
      name: http
  selector:
    app: order-service
